k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector: 
   matchLabels:
     app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "uiratan/hello-go:v5.6"
          resources:
            requests:
              cpu: "0.5"
              memory: 20Mi
            limits:
              cpu: "0.5"
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3 # a cada 3 segundos
            failureThreshold: 30 # vai tentar ate 30 vezes, totaliza 90 segundos

          readinessProbe:            
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            # initialDelaySeconds: 10 # retirado por conta do startupProbe

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            # initialDelaySeconds: 15 # igualar/aumentar em relação ao readiness # retirado por conta do startupProbe

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
              readOnly: true
            - mountPath: "/go/pvc"
              name: goserver-volume

              
      volumes:
        - name: goserver-volume
          persistentVolumeClaim: 
            claimName: goserver-pvc

        - name: config
          configMap:
            name: configmap-family
            items:
            - key: members
              path: "family.txt"
