k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-h
  # podManagementPolicy: Parallel
  replicas: 4
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-volume
        # resources:
        #   requests:
        #     cpu: "0.5"
        #     memory: 20Mi
        #   limits:
        #     cpu: "0.5"
        #     memory: 25Mi

        # ports:
        # - containerPort: 80
        #   name: web
        # volumeMounts:
        # - name: www

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      # accessModes: [ "ReadWriteOnce" ]
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
